--- a/README
+++ b/README
@@ -3,6 +3,8 @@
 	其中用到开源的游戏引擎cocos2d。
 	可以运行在iphone上
 
+如果不会使用git，可以通过  https://github.com/boobmoom/hello_world/zipball/master  这个链接下载。
+
 开发这个项目的目的:
 	1 学习objective-c和cocos2d
 	2 同时也可以作为其它人学习iphone游戏开发的资料
@@ -13,3 +15,7 @@
 	boobmoom@gmail.com
 
 希望有想要一同交流学习的爱好者一起来完成这个项目。请联系本人Email。
+
+
+
+如果不会使用git，可以通过  https://github.com/boobmoom/hello_world/zipball/master  这个链接下载。
