modified:   PLAN 	modified:   README

--- a/README
+++ b/README
@@ -7,7 +7,7 @@
 
 开发这个项目的目的:
 	1 学习objective-c和cocos2d
-	2 同时也可以作为其它人学习iphone游戏开发的资料
+	2 同时也可以作为其它人学习iphone游戏开发的资料,打造成中文资料中优秀的参考范例。
 
 还有继续需要完善的地方我会写在PLAN文件里。
 
