添加地图制作流程  	new file:   MapDesign  	modified:   PLAN  	modified:   README

--- a/README
+++ b/README
@@ -19,3 +19,11 @@
 
 
 如果不会使用git，可以通过  https://github.com/boobmoom/hello_world/zipball/master  这个链接下载。
+
+
+
+
+
+如果你开始了解源码，下面这些内容是你需要知道的。
+
+地图制作： 详见 MapDesign文件
